# glowing-memory

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_script.sh
.github/workflows/: ci.yml  release.yml
dc/pythondev/: docker-compose.yml
python/: Dockerfile.python  aggregate_article_texts.py  db_connection.py  email_sender.py  format_newsletter.py  generate_exec_summary_gpt_turbo.py  generate_exec_summary_mistral.py  get_github_repo_stats.py  get_top_stories_hn.py  get_top_stories_lobsters.py  github_stats.py  hacker_news.py  main.py  pyproject.toml  requirements.txt  run_script.sh  send_email.py  send_email_via_gmx.py  write_db.py  write_to_db.py
src/: get_top_stories_hn.py  get_top_stories_lobsters.py
tests/: test_newsletter.py
