[project]
name = "digestif"
version = "0.1.0"
requires-python = "==3.14.3"
dependencies = [
    "aiohttp==3.13.3",
    "resend==2.22.0",
    "beautifulsoup4==4.14.3",
    "requests==2.32.5",
    "mistralai==1.12.3",
    "lxml-html-clean==0.4.3",
]

[dependency-groups]
dev = [
    "ruff==0.15.1",
    "ty==0.0.17",
    "pytest==9.0.2",
    "mdformat==1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
